tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint32_16_random_one_less/serialized.ssz
х╘@╡╘ж╦┴*JШў?Ф╝sК8шzI`Б┼гjёЧ╝┴И;╢F№~╕eЭD	nжv╙Tt▒Щ2H╣╞k╩лч